# LibParse

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  main.cpp
.github/workflows/: c-cpp.yml  file.cpp  file2.cpp  loader.cpp  parser.cpp
inc/: ILibParse.hpp  LibParse.hpp
inc/File/: File.hpp  IFile.hpp
inc/LoadFile/: ILoadFile.hpp  LoadFile.hpp
lib/: CMakeLists.txt
lib/FileManager/inc/: File.hpp  LoadFile.hpp  Loader.hpp  Parser.hpp  ParserFile.hpp
lib/FileManager/src/: File.cpp  LoadFile.cpp  Loader.cpp  Parser.cpp
lib/FormatParser/inc/: JSONParser.hpp  XMLParser.hpp  jsonParser.hpp  xmlParser.hpp
lib/FormatParser/src/: JSONParser.cpp  XMLParser.cpp  jsonParser.cpp  xmlParser.cpp
lib/FormatWriter/inc/: JSONWriter.hpp
lib/FormatWriter/src/: JSONWriter.cpp
lib/fileManager/inc/: File.hpp  LoadFile.hpp  ParserFile.hpp
lib/fileManager/src/: File.cpp  LoadFile.cpp  ParserFile.cpp
lib/formatParser/inc/: jsonParser.hpp  xmlParser.hpp
lib/formatParser/src/: jsonParser.cpp  xmlParser.cpp
lib/inc/File/: File.hpp  IFile.hpp
lib/inc/LoadFile/: ILoadFile.hpp  LoadFile.hpp
lib/inc/Parser/: Parser.hpp
lib/inc/ParserFile/: ParserFile.hpp
lib/src/File/: File.cpp
lib/src/LoadFile/: LoadFile.cpp
lib/src/Parser/: Parser.cpp
lib/src/ParserFile/: ParserFile.cpp
lib/typeConv/inc/: basicConv.hpp
lib/typeConv/src/: basicConv.cpp
src/: LibParse.cpp
src/File/: File.cpp
src/LoadFile/: LoadFile.cpp
tests/: file.cpp  file2.cpp  json.cpp  loader.cpp  parser.cpp  xml.cpp
tests/files/JSON/: t1.json  t1_parsed.txt  t2_parsed.txt  t3_parsed.txt
tests/files/XML/: t1.xml  (+3 more)
